# online_org_capture

./: Cargo.toml  LICENSE
src/: main.rs
static/: index.html
