[package]
name = "capture"
version = "0.1.0"
authors = ["Tim \"S.D.Eagle\" Zeitz <dev.tim.zeitz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "^0.4.2"
basic-auth-raw = { git = "https://github.com/tim3z/basic-auth-raw" }
